Bug 290369 - Amarok won't notify when editing read-only files
Summary: Amarok won't notify when editing read-only files
Status: RESOLVED FIXED
Alias: None
Product: amarok
Classification: Applications
Component: File Browser (other bugs)
Version First Reported In: 2.5.0
Platform: Ubuntu Linux
: NOR normal
Target Milestone: 2.6
Assignee: Amarok Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-01-02 06:34 UTC by Ran Rutenberg
Modified: 2012-06-21 20:36 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 2.6
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Ran Rutenberg 2012-01-02 06:34:54 UTC
Version:           2.4.3 (using KDE 4.7.3) 
OS:                Linux

If you try to Edit Track Details of a read-only file, Amarok fails to issue any warning. Instead when you click Save & Close, the dialog closes without making any change.

Reproducible: Always

Steps to Reproduce:
1. Right click on a read-only file in the Media Sources panel.
2. Choose Edit Track Details
3. Make some changes.
4. Click Save & Close

Actual Results:  
Nothing happans

Expected Results:  
A warning should be issued so the user will know that he tried to edit a read-only file, thus allowing him to change the file permission (instead of losing all the changes).

OS: Linux (x86_64) release 3.0.0-14-generic
Compiler: gcc
Comment 1 Myriam Schweingruber 2012-01-02 11:17:41 UTC
If files are indeed read-only they are not editable at all and are grayed out in the editor.. 
You didn't per chance try to add id3 tags to wav files, didn't you? wav is not a container where you can add id3 tags. See also http://en.wikipedia.org/wiki/ID3#Implementation_in_non-mp3s_and_alternatives
Comment 2 Ran Rutenberg 2012-01-02 12:40:43 UTC
It happened to me using Ogg Vorbis and Flac files when the file permission was set to read-only (as are the files when you rip them from a CD in Kubuntu).
The files were not grayed out when I did the steps I described in the Steps to Reproduce in the original bug report. Indeed, having the files grayed out will solve this problem.
Thanks.
Comment 3 Myriam Schweingruber 2012-01-02 15:28:43 UTC
Could you please upgrade to Amarok 2.5 and try again? I can't reproduce this here.
Comment 4 Ran Rutenberg 2012-01-03 07:50:06 UTC
Hi,
I did some more checking. In order to reproduce you need to try edit the tags of a read-only file that is NOT part of your local collection (read-only files in the local collection are indeed grayed out but files that are not part of it aren't). One can access those files using the Files option in the Media Sources side pane (instead of the Local Music option) This problem also happened when I used Amarok 2.5.

Updated Steps to Reproduce:
1. Select a read-only file through Media Sources -> Files that is not part of your local collection.
2. Right click on it and choose Edit Track Details
3. Make some changes.
4. Click Save & Close
Comment 5 Myriam Schweingruber 2012-01-03 08:22:31 UTC
Thank you for the fast feedback.
Comment 6 Ralf Engels 2012-06-21 20:36:55 UTC
Git commit 71acc98347f7f1929f3e27a0ba70693380377c17 by Ralf Engels.
Committed on 19/06/2012 at 15:04.
Pushed by rengels into branch 'master'.

Don't supply EditCapabilities if FileTrack is not writable
FIXED-IN: 2.6

M  +5    -2    src/core-impl/meta/file/File.cpp

http://commits.kde.org/amarok/71acc98347f7f1929f3e27a0ba70693380377c17