Don't supply EditCapabilities if FileTrack is not writable

BUG: 290369
FIXED-IN: 2.6